--- a/Course_Project/数据结构课程设计2017版A.md
+++ b/Course_Project/数据结构课程设计2017版A.md
@@ -143,38 +143,38 @@
 
 ### 成绩评定细则：  
 1.	正确性和功能的完备性：程序是否可以运行，结果是否正确，是否实现要求的所有子功能，是否达到足够的程序代码（50分）  
-优：  程序代码>=2500  
-良：  程序代码>=2000  
-中：  程序代码>=1500  
-及格：程序代码>=1000  
+* 优：  程序代码>=2500  
+* 良：  程序代码>=2000  
+* 中：  程序代码>=1500  
+* 及格：程序代码>=1000  
 2.	课程设计报告中的算法说明的清晰程度，课程设计报告中总结的深刻程度（20分）  
 3.	独立完成情况( 30分）  
 总计：100分  
 
 ### 加分项目：  
-1.健壮性：异常处理的情况  
-2.可读性：代码编写是否规范，是否便于阅读。如函数、变量命名，‘{ }’的缩进，关键位置适量注释等  
-3.功能的完善：除要求实现的功能外，完成了其它的功能，实现了功能的完善  
-4.界面的设计：良好交互的界面  
+* 1.健壮性：异常处理的情况  
+* 2.可读性：代码编写是否规范，是否便于阅读。如函数、变量命名，‘{ }’的缩进，关键位置适量注释等  
+* 3.功能的完善：除要求实现的功能外，完成了其它的功能，实现了功能的完善  
+* 4.界面的设计：良好交互的界面  
 
 ### 编程语言：C、C++ 等  
 
 ### 检查方式:  
-1.	总体上检查程序的代码量，正确性，可读性，健壮性，功能的完备性,程序的结构是否合理；局部检查三个以上函数块  
-2.	检查程序的运行情况  
-3.	检查时间：每个学生的检查时间10分钟左右  
+* 1. 总体上检查程序的代码量，正确性，可读性，健壮性，功能的完备性,程序的结构是否合理；局部检查三个以上函数块  
+* 2. 检查程序的运行情况  
+* 3. 检查时间：每个学生的检查时间10分钟左右  
 
 ### 时间安排：  
-1 上机时间安排  
-2 课程设计报告电子文档上交时间  
-3 课程设计检查时间  
+* 1 上机时间安排  
+* 2 课程设计报告电子文档上交时间  
+* 3 课程设计检查时间  
 
 ### 课程设计报告要求：  
-1.所有的课程设计报告，均要有封面，包括：数据结构课程设计、班级、学号、姓名、和指导教师；  
-2.目录；  
-3.对每一题，给出自己采用的数据结构；  
-4.给出算法设计思想；  
-5.给出实现的源程序，并在必要的代码处给出注释；  
-6.给出测试数据和结果；  
-7.给出算法的时间复杂度、另外可以提出算法的改进方法；  
-8.结束语：说明总体完成情况，每一题的程序代码行，总代码行，心得体会；  
+* 1. 所有的课程设计报告，均要有封面，包括：数据结构课程设计、班级、学号、姓名、和指导教师；  
+* 2. 目录；  
+* 3. 对每一题，给出自己采用的数据结构；  
+* 4. 给出算法设计思想；  
+* 5. 给出实现的源程序，并在必要的代码处给出注释；  
+* 6. 给出测试数据和结果；  
+* 7. 给出算法的时间复杂度、另外可以提出算法的改进方法；  
+* 8. 结束语：说明总体完成情况，每一题的程序代码行，总代码行，心得体会；  
