--- a/Homework/数据结构上机实验题目-2017 v2.md
+++ b/Homework/数据结构上机实验题目-2017 v2.md
@@ -4,7 +4,8 @@
 ## 第一阶段（线性部分）  
 ### 《数据结构》第1上机题 （线性表练习）  
 1．编程实现书P19  ADT List 基本操作12个：  
-（1）	用顺序存储结构实现； （2）用链式存储结构实现；  
+（1）	用顺序存储结构实现； 
+（2）用链式存储结构实现；  
 2．编程，建立元素值为整型的顺序表，并实现就地逆置（习题集P18  2.21 ）。  
 3．编程，建立元素值为整型的单链表，并实现就地逆置（习题集P18  2.22 ）。  
 4．约瑟夫问题。输入n，s，m，设有n个人做作圆桌周围，从第s个人开始报数，报到m的人出列，然后再从下一个人开始报数，数到m的人又出列，如此重复，直到所有的人都出列为止。要求用链式结构和顺序结构实现，按出列的先后顺序输出每个人的信息。(选做题)  
@@ -123,7 +124,7 @@ IGNORED
 第二阶段总结  
 
 ## 第三阶段（查找与排序部分）  
-###《数据结构》 第8次上机题目  ( 查找 排序 练习 )  
+### 《数据结构》 第8次上机题目  ( 查找 排序 练习 )  
 1. 哈希表设计 ( 习题集 P166  6.2,用二次探测再散列处理冲突 )；  
 2．实现交换、选择、归并等简单排序算法；  
 3．实现快速排序算法；  
