--- a/Homework/数据结构上机实验题目-2017 v2.md
+++ b/Homework/数据结构上机实验题目-2017 v2.md
@@ -4,19 +4,19 @@
 ## 第一阶段（线性部分）  
 ### 《数据结构》第1上机题 （线性表练习）  
 1．编程实现书P19  ADT List 基本操作12个：  
-（1）	用顺序存储结构实现； 
+（1）	用顺序存储结构实现；  
 （2）用链式存储结构实现；  
 2．编程，建立元素值为整型的顺序表，并实现就地逆置（习题集P18  2.21 ）。  
 3．编程，建立元素值为整型的单链表，并实现就地逆置（习题集P18  2.22 ）。  
 4．约瑟夫问题。输入n，s，m，设有n个人做作圆桌周围，从第s个人开始报数，报到m的人出列，然后再从下一个人开始报数，数到m的人又出列，如此重复，直到所有的人都出列为止。要求用链式结构和顺序结构实现，按出列的先后顺序输出每个人的信息。(选做题)  
 
 ### 《数据结构》第2上机题 （线性表练习）  
-1. 建立元素值为整型的顺序表，编程，用插入排序算法实现顺序表排序。  
-2. 建立元素值为整型的单链表，编程，用插入排序算法实现单链表排序。  
-3．用顺序结构编程实现下列功能：假设以两个元素值为整型依值递增有序排列的线性表A和B 分别表示两个集合，现要求在A的空间上构成一个新线性表C，其元素为A和B元素的并集，且表C中的元素也是依值递增有序排列。  
+1. 建立元素值为整型的顺序表，编程，用插入排序算法实现顺序表排序。    
+2. 建立元素值为整型的单链表，编程，用插入排序算法实现单链表排序。   
+3．用顺序结构编程实现下列功能：假设以两个元素值为整型依值递增有序排列的线性表A和B 分别表示两个集合，现要求在A的空间上构成一个新线性表C，其元素为A和B元素的并集，且表C中的元素也是依值递增有序排列。   
 4．用单链表结构编程实现下列功能：假设以两个元素值为整型依值递增有序排列的线性表A和B 分别表示两个集合，现要求在A的空间上构成一个新线性表C，其元素为A和B元素的并集，且表C中的元素也是依值递增有序排列。  
 5．CSP题目  
-问题描述：首先输入正整数n，接着输入n个正整数，如果其中存在一个数，比该数大的个数等于比该数小的个数，则输出该数，如果不存在则输出-1。  
+问题描述：首先输入正整数n，接着输入n个正整数，如果其中存在一个数，比该数大的个数等于比该数小的个数，则输出该数，如果不存在则输出-1。     
 问题分析：这个问题可以用排序来实现。  
 
 
@@ -34,8 +34,7 @@
 ### 《数据结构》 第3次上机题（线性表复习，栈与队列练习）  
 1．编程实现书P45   ADT Stack 基本操作9个，用顺序存储结构实现；  
 2．编程实现书P59   ADT Queue 基本操作9个，用链式存储结构实现；  
-3．设某传感器，每秒不间断采集数据（整数0-1000），要求任何时刻只保留最后N个数据（初始值为0），并输出当前最大值，设N=10，试利用循环队列编写算法。  	
-4. CSP题目  
+3．设某传感器，每秒不间断采集数据（整数0-1000），要求任何时刻只保留最后N个数据（初始值为0），并输出当前最大值，设N=10，试利用循环队列编写算法。    4. CSP题目  
 问题描述  
 　　在某图形操作系统中,有 N 个窗口,每个窗口都是一个两边与坐标轴分别平行的矩形区域。窗口的边界上的点也属于该窗口。窗口之间有层次的区别,在多于一个窗口重叠的区域里,只会显示位于顶层的窗口里的内容。  
 　　当你点击屏幕上一个点的时候,你就选择了处于被点击位置的最顶层窗口,并且这个窗口就会被移到所有窗口的最顶层,而剩余的窗口的层次顺序不变。如果你点击的位置不属于任何窗口,则系统会忽略你这次点击。  
@@ -68,7 +67,7 @@ IGNORED
 　　第三次点击的位置同时属于三个窗口的范围,但是由于现在第 1 个窗口处于顶层,它被选择。  
 　　最后点击的 (0, 5) 不属于任何窗口。  
 
-###《数据结构》 第4次上机题（线性结构练习）  
+### 《数据结构》 第4次上机题（线性结构练习）  
 1．输入稀疏矩阵，建立稀疏矩阵三元组顺序结构，实现转置（1、2）；  
 2. CSP题目  
 问题描述：请实现一个铁路购票系统的简单座位分配算法，来处理一节车厢的座位分配。  
@@ -94,14 +93,14 @@ IGNORED
 第一阶段总结   
 
 
-## 第二阶段（树与图部分）	  
+## 第二阶段（树与图部分）  
 ### 《数据结构》 第5次上机题目  (二叉树练习 )  
-1. 编程实现书P121  ADT BinaryTree 基本操作20个，用二叉链表结构实现；  
+1. 编程实现书P121  ADT BinaryTree 基本操作20个，用二叉链表结构实现；   
 2. 二叉树的先序、中序、后序遍历非递归方法，层次遍历。  
 
 ### 《数据结构》 第6次上机题目  ( 二叉树 图 练习 )  
-1．编程实现书P156  ADT Graph 基本操作13个，用邻接矩阵存储结构实现；    
-2. 输入N个权值（1-100正整数），建立哈夫曼树。  
+1．编程实现书P156  ADT Graph 基本操作13个，用邻接矩阵存储结构实现；   
+2. 输入N个权值（1-100正整数），建立哈夫曼树。   
 
 ### 《数据结构》 第7次上机题目  ( 图 练习 )   
 1. 图的深度优先和广度优先遍历；  
@@ -125,10 +124,10 @@ IGNORED
 
 ## 第三阶段（查找与排序部分）  
 ### 《数据结构》 第8次上机题目  ( 查找 排序 练习 )  
-1. 哈希表设计 ( 习题集 P166  6.2,用二次探测再散列处理冲突 )；  
+1. 哈希表设计 ( 习题集 P166  6.2,用二次探测再散列处理冲突 )；   
 2．实现交换、选择、归并等简单排序算法；  
 3．实现快速排序算法；  
 4．实现堆排序算法；  
-5. 设二叉排序树T，元素值为整数，输入整数X，若存在输出该结点，若不存在，输出最接近X值的两个结点（有可能一个）。 (选做题)  
-6．实现基数排序算法 (选做题)。	  
+5. 设二叉排序树T，元素值为整数，输入整数X，若存在输出该结点，若不存在，输出最接近X值的两个结点（有可能一个）。 (选做题)     
+6．实现基数排序算法 (选做题)。  
 第三阶段总结
